# PhotoAward/PhotoAward.MemberManagement.Interfaces/ChangePasswordDto.cs
@@ -1,0 +1,9 @@
+﻿namespace PhotoAward.MemberManagement.Interfaces
+{
+    public class ChangePasswordDto
+    {
+        public string NewPassword { get; set; }
+        public string OldPassword { get; set; }
+        public string Email { get; set; }
+    }
+}
